Add pieces generator

--- a/TAiO/TAiO/TAiO.csproj
+++ b/TAiO/TAiO/TAiO.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmallestSquareOptimalFinder.cs" />
     <Compile Include="TetrisMatrix.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -84,6 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Algorithm\Algorithm.csproj">
+      <Project>{4070CD8B-0D81-4B05-ACC9-FEF20C14A207}</Project>
+      <Name>Algorithm</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
