--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Board.cs" />
+    <Compile Include="Model\Piece.cs" />
+    <Compile Include="OptimalSolution\PieceLocationFinder.cs" />
     <Compile Include="PiecesGenerators\LocationFinder.cs" />
     <Compile Include="PiecesGenerators\PiecesGenerator.cs" />
     <Compile Include="Model\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SmallestSquareOptimalFinder.cs" />
+    <Compile Include="OptimalSolution\SmallestSquareOptimalFinder.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
