--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Board.cs" />
+    <Compile Include="Model\BoardSegment.cs" />
     <Compile Include="Model\Piece.cs" />
     <Compile Include="OptimalSolution\PieceLocationFinder.cs" />
     <Compile Include="PiecesGenerators\LocationFinder.cs" />
