--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Heuristic\HeuristicTrio.cs" />
+    <Compile Include="Heuristic\PieceLocationFinderHeuristic.cs" />
+    <Compile Include="Heuristic\SmallestSquareHeuristic.cs" />
     <Compile Include="Model\Board.cs" />
     <Compile Include="Model\BoardSegment.cs" />
     <Compile Include="Model\Piece.cs" />
