--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -46,7 +46,9 @@
     <Compile Include="Heuristic\SmallestSquareHeuristic.cs" />
     <Compile Include="Model\Board.cs" />
     <Compile Include="Model\BoardSegment.cs" />
+    <Compile Include="Model\Pentomino.cs" />
     <Compile Include="Model\Piece.cs" />
+    <Compile Include="Model\PredefinedPieces.cs" />
     <Compile Include="OptimalSolution\PieceLocationFinder.cs" />
     <Compile Include="PiecesGenerators\LocationFinder.cs" />
     <Compile Include="PiecesGenerators\PiecesGenerator.cs" />
