--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Heuristic\SmallestSquareHeuristic.cs" />
     <Compile Include="Model\Board.cs" />
     <Compile Include="Model\BoardSegment.cs" />
+    <Compile Include="Model\Hexomino.cs" />
     <Compile Include="Model\Pentomino.cs" />
     <Compile Include="Model\Piece.cs" />
     <Compile Include="Model\PredefinedPieces.cs" />
