--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -51,11 +51,16 @@
     <Compile Include="Model\Piece.cs" />
     <Compile Include="Model\PredefinedPieces.cs" />
     <Compile Include="OptimalSolution\PieceLocationFinder.cs" />
+    <Compile Include="OptimalSolution\SmallestSquareFinder.cs" />
+    <Compile Include="OptimalSolution\SmallestSquareOptimalSpecifiedPieces.cs" />
+    <Compile Include="OptimalSolution\Solution.cs" />
+    <Compile Include="OptimalSolution\SolutionRow.cs" />
     <Compile Include="PiecesGenerators\LocationFinder.cs" />
     <Compile Include="PiecesGenerators\PiecesGenerator.cs" />
     <Compile Include="Model\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OptimalSolution\SmallestSquareOptimalFinder.cs" />
+    <Compile Include="SolutionComparer.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
