--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -55,12 +55,15 @@
     <Compile Include="OptimalSolution\SmallestSquareOptimalSpecifiedPieces.cs" />
     <Compile Include="OptimalSolution\Solution.cs" />
     <Compile Include="OptimalSolution\SolutionRow.cs" />
+    <Compile Include="OptimalSolution\SymmetricPieceChecker.cs" />
     <Compile Include="PiecesGenerators\LocationFinder.cs" />
     <Compile Include="PiecesGenerators\PiecesGenerator.cs" />
     <Compile Include="Model\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OptimalSolution\SmallestSquareOptimalFinder.cs" />
     <Compile Include="SolutionComparer.cs" />
+    <Compile Include="UniquePiecesFinder.cs" />
+    <Compile Include="UniqueSolutionsFinder.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
