--- a/TAiO/Algorithm/Algorithm.csproj
+++ b/TAiO/Algorithm/Algorithm.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlghoritmFactories\AlghoritmFactory.cs" />
+    <Compile Include="AlghoritmFactories\AlghoritmRunner.cs" />
+    <Compile Include="AlghoritmFactories\AlgorithmType.cs" />
+    <Compile Include="AlghoritmFactories\GeneratorMapper.cs" />
     <Compile Include="Heuristic\HeuristicTrio.cs" />
     <Compile Include="Heuristic\PieceLocationFinderHeuristic.cs" />
     <Compile Include="Heuristic\SmallestSquareHeuristic.cs" />
@@ -52,7 +56,7 @@
     <Compile Include="Model\PredefinedPieces.cs" />
     <Compile Include="OptimalSolution\PieceLocationFinder.cs" />
     <Compile Include="OptimalSolution\SmallestSquareFinder.cs" />
-    <Compile Include="OptimalSolution\SmallestSquareOptimalSpecifiedPieces.cs" />
+    <Compile Include="OptimalSolution\SmallestSquareOptimalPredefinedPieces.cs" />
     <Compile Include="OptimalSolution\Solution.cs" />
     <Compile Include="OptimalSolution\SolutionRow.cs" />
     <Compile Include="OptimalSolution\SymmetricPieceChecker.cs" />
@@ -61,9 +65,7 @@
     <Compile Include="Model\Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OptimalSolution\SmallestSquareOptimalFinder.cs" />
-    <Compile Include="SolutionComparer.cs" />
     <Compile Include="UniquePiecesFinder.cs" />
-    <Compile Include="UniqueSolutionsFinder.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
